# iocflow

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  __main__.py  accuracy.py  corpus.py
docs/: demo.cast
docs/design/: coverage.md
examples/: demo_investigate.py  github-action-usage.yml  mcp_server.py  misp_interop.py  poller_advisories.py  stix_interop.py
scripts/: bump.py
src/iocflow/: __init__.py  __main__.py  allowlists.py  cli.py  extract.py  mitre.py  models.py  providers.py  refang.py  severity.py
src/iocflow/agent/: __init__.py  chat_gate.py  gate.py  graph.py  model.py  nodes.py  state.py  tools.py
src/iocflow/ai/: __init__.py  commentary.py  models.py  openai_compat.py  prompt.py  protocol.py
src/iocflow/block/: __init__.py  base.py  guard.py  models.py  protocol.py  runner.py
src/iocflow/block/targets/: __init__.py  abnormal.py  crowdstrike.py  pan_edl.py  panos.py  zscaler.py
src/iocflow/enrich/: __init__.py  base.py  cache.py  models.py  protocol.py  runner.py
src/iocflow/enrich/sources/: __init__.py  abusech.py  abuseipdb.py  virustotal.py
src/iocflow/extractors/: __init__.py  actors.py  contacts.py  files.py  network.py  vulns.py
src/iocflow/hunt/: __init__.py  coverage.py  coverage_models.py  llm.py  models.py  prompt.py  protocol.py  registry.py  suggest.py
src/iocflow/hunt/dialects/: __init__.py  _common.py  cortex.py  crowdstrike.py  sigma.py
src/iocflow/mcp/: __init__.py  __main__.py  server.py  tools.py
src/iocflow/misp/: __init__.py  client.py  enricher.py  mapping.py  publish.py  source.py
src/iocflow/sources/: __init__.py  models.py  poller.py  protocol.py  registry.py  store.py
src/iocflow/sources/feeds/: __init__.py  file.py  github_advisory.py  rss.py
src/iocflow/stix/: __init__.py  build.py  parse.py  taxii.py
tests/: test_agent.py  test_ai.py  test_benchmark.py  test_block.py  test_cli.py  test_coverage.py  test_enrich.py  test_extract.py  test_fuzz.py  test_hunt.py  test_mcp.py  test_misp.py  test_providers_and_mitre.py  test_sources.py  test_stix.py
