[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iocflow"
version = "0.5.0"
description = "Extract threat indicators (IOCs) from unstructured text and enrich them against threat-intel sources (VirusTotal, AbuseIPDB, abuse.ch). A layered, pip-extras toolkit for the IOC lifecycle."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Vinay Vobbilichetty", email = "vinayvobbilichetty11@gmail.com" }]
keywords = [
    "ioc", "indicators-of-compromise", "threat-intelligence", "cybersecurity",
    "extraction", "mitre-attack", "cve", "threat-actor", "malware", "dfir",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tldextract>=3.4",
]

[project.optional-dependencies]
# Bundled MITRE ATT&CK malware-name provider (fetches the public STIX bundle).
mitre = ["requests>=2.25"]
# Layer 2: enrichment against threat-intel sources (VirusTotal, AbuseIPDB, abuse.ch).
enrich = ["requests>=2.25"]
# Layer 3: AI commentary via any OpenAI-compatible chat endpoint.
ai = ["requests>=2.25"]
# Layer 4: suggested hunts. The deterministic renderers are stdlib-only; this
# extra only covers the optional LLM behavioral-hunt path.
hunt = ["requests>=2.25"]
# Layer 5: response / blocking (PAN-OS, Zscaler, CrowdStrike, Abnormal). The
# EDL-feed target is stdlib-only; this extra covers the live HTTP targets.
block = ["requests>=2.25"]
# Layer 6: the agentic capstone — a LangGraph multi-agent team over L1–L5, with
# m1→s1-style failover via langchain-failover and a human-in-the-loop gate.
# LangGraph/LangChain require Python >=3.10; the rest of iocflow still runs on 3.9.
agent = [
    "requests>=2.25",
    "langgraph>=0.2; python_version >= '3.10'",
    "langchain-core>=0.3; python_version >= '3.10'",
    "langchain-openai>=0.2; python_version >= '3.10'",
    "langchain-failover>=0.1; python_version >= '3.10'",
]
dev = [
    "requests>=2.25",
    "pytest>=7",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
    "langgraph>=0.2; python_version >= '3.10'",
    "langchain-core>=0.3; python_version >= '3.10'",
    "langchain-openai>=0.2; python_version >= '3.10'",
    "langchain-failover>=0.1; python_version >= '3.10'",
]

[project.scripts]
iocflow = "iocflow.cli:main"

[project.urls]
Homepage = "https://github.com/vinayvobbili/iocflow"
Repository = "https://github.com/vinayvobbili/iocflow"
Issues = "https://github.com/vinayvobbili/iocflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/iocflow"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# test_agent.py runs pytest.importorskip before its imports (skip on Python 3.9).
"tests/test_agent.py" = ["E402"]
